cxxPack Version 7.0.5 Released on 7/03/2010

Highlights:

o Builds on Rcpp package/library with a focus on reproducible
  research and C++ model classes (supplementing Rcpp's proxy classes).
  Derived from RcppTemplate 6.1.

o Instead of echoing vignette compile and link stats this information
  is now written to a log file (inst/doc/cpp/compile.log by default).

o No longer using inst/doc/Makefile. Updated docs.

o Updated to accommodate recent changes to BEGIN_RCPP/END_RCPP macros.

o Removed defn of Rcpp::wrap() for RcppMatrix<int>, RcppMatrix<double>
  since these now exist in Rcpp package.