@@ -1,7 +1,7 @@
 Package: cxxPack
 Title: R/C++ Tools for Literate Statistical Practice
-Version: 7.0.5
-Date: 2010-07-03
+Version: 7.0.6
+Date: 2010-07-21
 Author: Dominick Samperi
 Maintainer: Dominick Samperi <djsamperi@gmail.com>
 Description: Builds on the Rcpp package/library by providing an
@@ -20,5 +20,5 @@ Depends: R (>= 2.10.0), Rcpp (>= 0.8.2), RUnit, zoo
 SystemRequirements: GNU make
 License: GPL-3
 Repository: CRAN
-Packaged: 2010-07-04 13:25:38 UTC; dsamperi
-Date/Publication: 2010-07-05 11:20:42
+Date/Publication: 2010-07-24 20:09:38
+Packaged: 2010-07-22 05:34:01 UTC; dsamperi
