@@ -1,49 +1,0 @@
-# Emacs please make this -*- mode: makefile; tab-width: 8 -*-
-#
-# Makefile.win for cxxPack adapted from the one in Rcpp.
-#
-# Copyright (C) 2008 - 2009 Dirk Eddelbuettel <edd@debian.org>
-# Copyright (C) 2010        Dirk Eddelbuettel and Romain Francois
-#
-# Contributions from an older Makefile.win are
-# (C) Dominick Samperi and Uwe Ligges and gratefully acknowledged
-#
-# Contributions from Brian D Ripley are also gratefully acknowledged 
-
-PKG_CPPFLAGS = $(shell $(R_HOME)/bin/Rscript --vanilla -e "Rcpp:::CxxFlags()" ) -I../inst/include
-PKG_LIBS = $(shell $(R_HOME)/bin/Rscript --vanilla -e "Rcpp:::LdFlags()" )
-
-SOURCES =	$(wildcard *.cpp)
-OBJECTS =	$(SOURCES:.cpp=.o)
-
-USERDIR	= 	../inst/lib$(R_ARCH)
-STATICLIB =	libcxxPack.a
-USERLIB	= 	$(USERDIR)/$(STATICLIB)
-
-# Swap POSIX class if R minor version >= 12
-PKG_CPPFLAGS += $(shell $(R_HOME)/bin/Rscript --vanilla -e "{ x = ifelse(version[['minor']] >= 12.0,'-DSWAP_POSIXt',''); cat(x) }" )
-
-# Suppress variadic marco warnings from g++
-ifeq ($(shell $(R_HOME)/bin/R CMD config CXX),g++)
-PKG_CPPFLAGS += -Wno-variadic-macros
-endif
-
-RM = 		rm -f
-
-.PHONY: 	all clean
-
-all: 		userlib $(SHLIB)
-
-clean:
-		$(RM) $(OBJECTS) $(SHLIB)
-
-$(USERLIB):	$(OBJECTS)
-
-
-userlib:	$(STATICLIB)
-		-mkdir -p $(USERDIR)
-		-mv $(STATICLIB) $(USERLIB)
-
-$(STATICLIB):	$(OBJECTS)
-
-
